--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-57) unstable; urgency=low
+
+  * Bug #46765: replace old create_ou script
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 04 Oct 2018 12:22:45 +0200
+
 ucs-school-import (16.0.2-56) unstable; urgency=low
 
   * Bug #47861: catch invalid group name
