--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-24) unstable; urgency=low
+
+  * Bug #46765: Extend School validation
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 04 Oct 2018 12:23:37 +0200
+
 ucs-school-lib (11.0.1-23) unstable; urgency=low
 
   * Bug #47408: Check if a computer object with given uid is already present
