--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-58) unstable; urgency=low
+
+  * Bug #46765: fix broken function call in create_ou script
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 05 Oct 2018 09:39:54 +0200
+
 ucs-school-import (16.0.2-57) unstable; urgency=low
 
   * Bug #46765: replace old create_ou script
