--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-25) unstable; urgency=low
+
+  * Bug #46765: Fix potential problem in School validation
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 05 Oct 2018 10:14:04 +0200
+
 ucs-school-lib (11.0.1-24) unstable; urgency=low
 
   * Bug #46765: Extend School validation
