--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-1) unstable; urgency=medium
+
+  * Bug #47957: Add role packages
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 17 Jan 2019 10:43:11 +0100
+
 ucs-school-metapackage (12.0.0-0) unstable; urgency=medium
 
   * bump version for UCS@school 4.4
