--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-28) unstable; urgency=low
+
+  * Bug #47966: add simple interface to check school membership of computers
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 12 Oct 2018 13:12:11 +0200
+
 ucs-school-lib (11.0.1-27) unstable; urgency=low
 
   * Bug #47408: Extend School validation for dc_name
