--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (1.0.1-3) unstable; urgency=low
+
+  * Bug #45165: adapt to changed behavior of HTTP-API
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 16 Oct 2018 12:18:12 +0200
+
 ucs-school-umc-import (1.0.1-2) unstable; urgency=medium
 
   * Bug #45749: add support for Role resource
