--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (14.0.0-8) unstable; urgency=low
+
+  * Bug #47645: improve systemd usage
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 17 Oct 2018 09:33:12 +0200
+
 ucs-school-webproxy (14.0.0-7) unstable; urgency=low
 
   * Bug #47645: migrate proxy/pac/exclude/domains/domainnames to
