--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-27) unstable; urgency=low
+
+  * Bug #47408: Extend School validation for dc_name
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 24 Oct 2018 08:49:55 +0200
+
 ucs-school-lib (11.0.1-26) unstable; urgency=low
 
   * Bug #45379: prevent writing of role attribute when deactivated
