--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (11.0.2-1) unstable; urgency=medium
+
+  * Bug #47807: Add demo school and portal on fresh installations
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 24 Oct 2018 10:56:33 +0200
+
 ucs-school-metapackage (11.0.1-6) unstable; urgency=medium
 
   * Bug #47332: restart s4-connector to activate new config
