--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (14.0.1-3) unstable; urgency=medium
+
+  * Bug #47805: Add server password change script to restart daemon
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 29 Oct 2018 18:00:35 +0100
+
 ucs-school-netlogon-user-logonscripts (14.0.1-2) unstable; urgency=low
 
   * Bug #46922: add new icon for Univention Portal shortcut
