--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (6.0.0-3) unstable; urgency=low
+
+  * Bug #47807: Add info text about demo school to installer
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 07 Nov 2018 10:39:16 +0100
+
 ucs-school-umc-installer (6.0.0-2) unstable; urgency=low
 
   * Bug #46469: use "apt-get update" instead of package_manager.update()
