--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (6.0.0-4) unstable; urgency=low
+
+  * Bug #47807: Fix missing python version in script
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 07 Nov 2018 10:53:22 +0100
+
 ucs-school-umc-installer (6.0.0-3) unstable; urgency=low
 
   * Bug #47807: Add info text about demo school to installer
