--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (11.0.2-3) unstable; urgency=medium
+
+  * Bug #47807: Create demo class and add student to it
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 08 Nov 2018 13:36:02 +0200
+
 ucs-school-metapackage (11.0.2-2) unstable; urgency=medium
 
   * Bug #47807: Shrink background picture and improve demo portal installation
