--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-62) unstable; urgency=medium
+
+  * Bug #46765: Fix bug with sharefileserver name
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 12 Nov 2018 10:37:01 +0100
+
 ucs-school-import (16.0.2-61) unstable; urgency=medium
 
   * Bug #46765: Return with exit code != 0 if at least one ou creation fails
