--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,5 +1,11 @@
 ucs-test-ucsschool (5.0.3-3) unstable; urgency=low
 
+  * Bug #47978: fix 01_password_reset
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 23 Nov 2018 10:45:54 +0100
+
+ucs-test-ucsschool (5.0.3-3) unstable; urgency=low
+
   * Bug #48068: fix wrong logic in
     univention.testing.ucsschool.create_school_admin() regarding school membership.
 
@@ -596,7 +602,7 @@ ucs-test-ucsschool (5.0.2-7) unstable; urgency=low
 ucs-test-ucsschool (5.0.2-6) unstable; urgency=low
 
   * Bug #44310: stabilize tests
-  * Bug #46016: reduce import jobs by 3/4th (batch 2) 
+  * Bug #46016: reduce import jobs by 3/4th (batch 2)
 
  -- Daniel Troeder <troeder@univention.de>  Wed, 14 Feb 2018 13:58:24 +0100
 
@@ -2855,8 +2861,8 @@ ucs-test-ucsschool (2.0.50-1) unstable; urgency=low
 
 ucs-test-ucsschool (2.0.49-1) unstable; urgency=low
 
-  * Bug #38201: added 
-    00_checks/15_ucsschool_check_windows_printer_driver_for_pdf_printer 
+  * Bug #38201: added
+    00_checks/15_ucsschool_check_windows_printer_driver_for_pdf_printer
 
  -- Felix Botner <botner@univention.de>  Wed, 22 Apr 2015 09:57:08 +0200
 
