--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (11.0.2-8) unstable; urgency=medium
+
+  * Bug #48186: Fix typo
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 26 Nov 2018 11:58:39 +0100
+
 ucs-school-metapackage (11.0.2-7) unstable; urgency=medium
 
   * Bug #47807: Fix file permission for /etc/demoschool.secret
@@ -345,7 +351,7 @@ ucs-school-metapackage (9.0.0-1) unstable; urgency=medium
 
 ucs-school-metapackage (8.0.1-6) unstable; urgency=low
 
-  * resync msprintconnectionpolicy objects (Bug #32041) 
+  * resync msprintconnectionpolicy objects (Bug #32041)
 
  -- Felix Botner <botner@univention.de>  Wed, 13 Jan 2016 15:12:37 +0100
 
@@ -1307,7 +1313,7 @@ ucs-school-metapackage (1.0.4-1) unstable; urgency=low
 
   * during first installation of singleserver meta package
     - set ucsschool/defaultschoolname to "musterschule"
-    - set samba/defaultcontainer/computer to cn=computers in 
+    - set samba/defaultcontainer/computer to cn=computers in
       example school ou
     - set dhcpd/ldap/base to cn=dhcp in example school ou
     - create example school ou (Bug: #15326)
