--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (1.0.1-4) unstable; urgency=low
+
+  * Bug #48303: Fix broken date format since dojo upgrade
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 10 Dec 2018 10:45:23 +0100
+
 ucs-school-umc-import (1.0.1-3) unstable; urgency=low
 
   * Bug #45165: adapt to changed behavior of HTTP-API
