--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-29) unstable; urgency=low
+
+  * Bug #48245: Fix bug in school model for existing DC Slaves
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 12 Dec 2018 10:12:41 +0200
+
 ucs-school-lib (11.0.1-28) unstable; urgency=low
 
   * Bug #47966: add simple interface to check school membership of computers
@@ -976,7 +982,7 @@ ucs-school-lib (5.0.47-3) unstable; urgency=low
 
 ucs-school-lib (5.0.47-2) unstable; urgency=low
 
-  * Bug #35174: When deleting an object, also delete related objects 
+  * Bug #35174: When deleting an object, also delete related objects
 
  -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 13 Aug 2014 10:20:22 +0200
 
@@ -1992,7 +1998,7 @@ ucs-school-lib (1.0.15-1) unstable; urgency=low
 
 ucs-school-lib (1.0.14-1) unstable; urgency=low
 
-  * optimize SchoolBaseModule._users() for search with no pattern in a 
+  * optimize SchoolBaseModule._users() for search with no pattern in a
     specific group
   * fix LDAP_Filter.forAll() to concatenate subexpressions with AND operation
   Bug #25701
@@ -2086,7 +2092,7 @@ ucs-school-lib (1.0.2-1) unstable; urgency=low
 ucs-school-lib (1.0.1-1) unstable; urgency=low
 
   * use machine account to map username to binddn in
-    schoolldap.py (Bug #15037) 
+    schoolldap.py (Bug #15037)
 
  -- Felix Botner <botner@univention.de>  Tue, 17 Jan 2012 12:32:40 +0100
 
