--- a/ucs-school-info/debian/changelog
+++ b/ucs-school-info/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-info (9.0.0-0) unstable; urgency=medium
+
+  * bump version for UCS@school 4.4
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 14 Dec 2018 22:14:32 +0200
+
 ucs-school-info (8.0.1-1) unstable; urgency=medium
 
   * Bug #46175: adapt to API change of "disabled" property
