--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (2.0.0-0) unstable; urgency=low
+
+  * bump version for UCS@school 4.4
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 14 Dec 2018 22:14:32 +0200
+
 ucs-school-umc-import (1.0.1-4) unstable; urgency=low
 
   * Bug #48303: Fix broken date format since dojo upgrade
