--- a/univention-management-console-module-selective-udm/debian/changelog
+++ b/univention-management-console-module-selective-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-selective-udm (8.0.0-0) unstable; urgency=medium
+
+  * bump version for UCS@school 4.4
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 14 Dec 2018 22:14:32 +0200
+
 univention-management-console-module-selective-udm (7.0.0-1) unstable; urgency=medium
 
   * Bug #45988: bumped version
