--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (12.0.1-1) unstable; urgency=low
+
+  * Bug #47885: add _users_ldap() in schoolldap.py as a faster variant to
+    query all users with certain criteria
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 20 Dec 2018 22:23:36 +0100
+
 ucs-school-lib (12.0.1-0) unstable; urgency=low
 
   * Improve get_all for WorkGroupShare
