--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.0.1-0) unstable; urgency=low
+
+  * Improve get_all for WorkGroupShare
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 08 Jan 2019 12:58:11 +0200
+
 ucs-school-lib (12.0.0-0) unstable; urgency=low
 
   * bump version for UCS@school 4.4
