--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.0.1-3) unstable; urgency=low
+
+  * Bug #48226: Activate role feature by default
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 10 Jan 2019 11:55:23 +0100
+
 ucs-school-lib (12.0.1-2) unstable; urgency=low
 
   * Bug #48429: fix get_all() for School objects
