--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.0.1-4) unstable; urgency=low
+
+  * Bug #48226: Completely remove possibility to deactivate role feature
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 10 Jan 2019 12:47:11 +0100
+
 ucs-school-lib (12.0.1-3) unstable; urgency=low
 
   * Bug #48226: Activate role feature by default
