Bug #47351: change default of normalization:firstname and normalization:lastname

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (17.0.1-2) unstable; urgency=low
+
+  * Bug #47351: change default of normalization:firstname and
+    normalization:lastname
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 16 Jan 2019 09:41:59 +0100
+
 ucs-school-import (17.0.1-1) unstable; urgency=low
 
   * Bug #48226: Completely remove possibility to deactivate role feature
