--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.0-1) unstable; urgency=low
+
+  * Bug #48045: remove users classes if none are set in school_classes
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 17 Jan 2019 11:10:12 +0100
+
 ucs-school-lib (12.0.1-5) unstable; urgency=low
 
   * Bug #48428: Fix wrong usage of UDM in share.py
