--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-2) unstable; urgency=medium
+
+  * Bug #47957: Fix problem with joinscript and missing python version
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 17 Jan 2019 12:49:01 +0100
+
 ucs-school-metapackage (12.0.0-1) unstable; urgency=medium
 
   * Bug #47942: Updates to simplify the ucs@school installation process
