--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-3) unstable; urgency=medium
+
+  * Bug #48384: Add LDAP indices for ucsschoolRole
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 18 Jan 2019 12:11:48 +0100
+
 ucs-school-metapackage (12.0.0-2) unstable; urgency=medium
 
   * Bug #47957: Fix problem with joinscript and missing python version
