--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.0-4) unstable; urgency=medium
+
+  * Bug #48384: Fix schema check for ldap indices
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 21 Jan 2019 11:23:43 +0100
+
 ucs-school-metapackage (12.0.0-3) unstable; urgency=medium
 
   * Bug #48384: Add LDAP indices for ucsschoolRole
