--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.3-1) unstable; urgency=low
+
+  * Bug #45538: fix OID clash in LDAP schema
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Jan 2019 15:40:09 +0100
+
 ucs-school-import (16.0.2-67) unstable; urgency=low
 
   * Bug #48478: allow forward compatible use of record_uid and source_uid
